methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: not found: value x
    x=getCouleurSol():Color
    ^SlugTracking:8: error: not found: value x
    if (x==Color.green){
        ^SlugTracking:20: error: not found: value x
      x=getCouleurSol():Color
      ^SlugTracking:22: error: not found: value x
      if (x==Color.green){
          ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^